<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent"
	android:id="@+id/scrollView1">

	<LinearLayout android:id="@+id/linearLayout1"
		android:orientation="vertical" android:layout_height="wrap_content"
		android:layout_width="fill_parent">

		<LinearLayout
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:baselineAligned="true">

			<ImageView android:layout_height="wrap_content"
				android:src="@drawable/sl_icon_badge" android:layout_width="fill_parent"
				android:layout_marginTop="5dip" android:layout_marginBottom="3dip"
				android:layout_gravity="center"></ImageView>

		</LinearLayout>
		
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_enable_scoreloop"
			android:text="@string/enable_scoreloop"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_start_game"
			android:text="@string/start_game"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_resume_game"
			android:text="@string/resume_game"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_leaderboard"
			android:text="@string/leaderboard"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_challenges"
			android:text="@string/challenges"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_achievements"
			android:text="@string/achievements"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_friends"
			android:text="@string/friends"></Button>
		<Button android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:id="@+id/button_profile"
			android:text="@string/profile"></Button>
	</LinearLayout>
</ScrollView>