<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/linearLayout1"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_height="fill_parent" android:layout_width="fill_parent">

		<ImageView android:layout_height="wrap_content" android:id="@+id/imageView1"
			android:src="@drawable/sl_icon_badge" android:layout_width="fill_parent"
			android:layout_marginTop="5dip" android:layout_marginBottom="3dip"
			android:layout_gravity="center"></ImageView>

		<TextView android:layout_width="fill_parent" android:text="@string/username"
			android:layout_height="wrap_content" />
		<EditText android:layout_width="fill_parent" android:id="@+id/text_username"
			android:layout_height="wrap_content" />

		<TextView android:layout_width="fill_parent" android:text="@string/email"
			android:layout_height="wrap_content" />
		<EditText android:layout_width="fill_parent" android:id="@+id/text_email"
			android:layout_height="wrap_content" />
			
		<TextView android:layout_width="fill_parent" android:text="@string/profile_picture"
			android:layout_height="wrap_content" />
		<ImageButton android:layout_width="fill_parent" android:layout_height="wrap_content" 
			android:id="@+id/button_image_profile" />

		<Button android:text="@string/save_profile" android:id="@+id/button_save_profile"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>

	</LinearLayout>

</ScrollView>