<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ImageView android:src="@drawable/sl_icon_user"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/user_dialog_image" android:layout_gravity="center"
		android:padding="8dp"></ImageView>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout1">

		<Button android:layout_width="fill_parent" android:id="@+id/user_dialog_add"
			android:text="@string/user_add_friend" android:layout_weight="1"
			android:layout_height="fill_parent"></Button>

		<Button android:layout_width="fill_parent" android:id="@+id/user_dialog_remove"
			android:text="@string/user_remove_friend" android:layout_weight="1"
			android:layout_height="fill_parent"></Button>

		<Button android:layout_width="fill_parent" android:id="@+id/user_dialog_challenge"
			android:text="@string/challenge_user" android:layout_weight="1"
			android:layout_height="fill_parent"></Button>


	</LinearLayout>

</LinearLayout>
